update gitignore and uwsgi.ini

--- a/django_backend/uwsgi.ini
+++ b/django_backend/uwsgi.ini
@@ -9,4 +9,6 @@ vacuum  = true
 wsgi-file = ./backend/wsgi.py
 touch-reload = ./reload
 daemonize = buaa.log
-pythonpath = /root/env/lib/python3.8/site-packages/ 
+pythonpath = /root/env/lib/python3.8/site-packages/
+env LANG="zh_CN.UTF-8"
+env LANGUAGE="zh_CN.UTF-8"
