--- a/django_backend/uwsgi.ini
+++ b/django_backend/uwsgi.ini
@@ -1,14 +1,16 @@
 [uwsgi]
-chdir   = ./
+chdir   = /home/ubuntu/ReedSailing-BackEnd/django_backend/
 module  = buaa.wsgi
 master  = true
 processes = 10
-socket  = :8000
+socket  = 127.0.0.1:8000
 #socket = ./buaa.sock
 vacuum  = true
-wsgi-file = ./backend/wsgi.py
-touch-reload = ./reload
-daemonize = buaa.log
-pythonpath = /root/env/lib/python3.8/site-packages/
+wsgi-file = /home/ubuntu/ReedSailing-BackEnd/django_backend/backend/wsgi.py
+touch-reload = /home/ubuntu/ReedSailing-BackEnd/django_backend/reload
+daemonize = /home/ubuntu/ReedSailing-BackEnd/django_backend/buaa.log
+home= /root/env/
+# pythonpath = /root/env/lib/python3.8/site-packages/
 env LANG="zh_CN.UTF-8"
 env LANGUAGE="zh_CN.UTF-8"
+# plugins = python
